--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,92 +18,8 @@
         android:layout_height="fill_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@id/main_menubar"
-        android:layout_margin="0px" />
+        android:layout_margin="0px"
+        android:padding="0px" />
 
 </RelativeLayout>
 
-    <!--<RelativeLayout--><!--android:id="@+id/rl_upbar"--><!--android:layout_width="fill_parent"--><!--android:layout_height="45dp"--><!--android:layout_alignParentTop="true"--><!--android:layout_alignParentStart="true"--><!--android:paddingLeft="10dp"--><!--android:paddingRight="10dp">-->
-
-    <!--<ImageButton--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:background="@null"--><!--android:src="@drawable/trashcan"--><!--android:layout_alignParentStart="true"--><!--android:layout_centerVertical="true"/>-->
-
-    <!--<ImageButton--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:background="@null"--><!--android:src="@drawable/addalarm"--><!--android:layout_alignParentEnd="true"--><!--android:layout_centerVertical="true"/>-->
-
-
-    <!--</RelativeLayout>-->
-
-    <!--<RelativeLayout--><!--android:id="@+id/rl_line1"--><!--android:layout_width="fill_parent"--><!--android:layout_height="@dimen/alarmlist_height"--><!--android:layout_below="@id/rl_upbar">-->
-
-    <!--<ImageButton--><!--android:layout_width="55dp"--><!--android:layout_height="55dp"--><!--android:layout_marginStart="25dp"--><!--android:adjustViewBounds="true"--><!--android:background="@null"--><!--android:src="@drawable/alram_onetime"--><!--android:scaleType="fitCenter"--><!--android:layout_centerVertical="true"/>-->
-
-    <!--<RelativeLayout--><!--android:layout_width="fill_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_marginStart="120dp"--><!--android:layout_centerVertical="true">-->
-
-    <!--<TextView--><!--android:id="@+id/time1"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="AM 8:00"--><!--android:textColor="#ffffff"--><!--android:textSize="20sp"--><!--android:alpha=".60"/>-->
-
-    <!--<ImageButton--><!--android:layout_width="20dp"--><!--android:layout_height="20dp"--><!--android:background="@null"--><!--android:src="@drawable/alpha_small_off"--><!--android:layout_toRightOf="@id/time1"--><!--android:layout_alignBottom="@id/time1"--><!--android:scaleType="fitCenter"/>-->
-
-    <!--<TextView--><!--android:id="@+id/time1_exptime"--><!--android:layout_below="@id/time1"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="3시간 10분 후 울림"--><!--android:textColor="#ffffff"--><!--android:textSize="20sp"--><!--/>-->
-
-    <!--</RelativeLayout>-->
-
-
-    <!--</RelativeLayout>-->
-
-    <!--<RelativeLayout--><!--android:id="@+id/rl_line2"--><!--android:layout_width="fill_parent"--><!--android:layout_height="140dp"--><!--android:layout_below="@id/rl_line1">-->
-
-    <!--<ImageButton--><!--android:layout_width="75dp"--><!--android:layout_height="75dp"--><!--android:layout_marginStart="15dp"--><!--android:layout_marginTop="30dp"--><!--android:background="@null"--><!--android:src="@drawable/alram_large_on"--><!--android:adjustViewBounds="true"--><!--android:scaleType="fitCenter"/>-->
-
-    <!--<RelativeLayout--><!--android:layout_width="fill_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_marginStart="120dp"--><!--android:layout_marginTop="30dp">-->
-
-    <!--<TextView--><!--android:id="@+id/time2"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="AM 8:00"--><!--android:textColor="#ffffff"--><!--android:textSize="35sp"--><!--android:alpha=".90"/>-->
-
-    <!--<ImageButton--><!--android:layout_width="37dp"--><!--android:layout_height="37dp"--><!--android:background="@null"--><!--android:src="@drawable/alpha_large_on"--><!--android:layout_marginStart="10dp"--><!--android:layout_toRightOf="@id/time2"--><!--android:layout_alignTop="@id/time2"--><!--android:scaleType="fitCenter"/>-->
-
-    <!--<TextView--><!--android:id="@+id/time2_day"--><!--android:layout_below="@id/time2"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Mon Tue Wed Thu Fri Sat Sun"--><!--android:textStyle="bold"--><!--android:textColor="#ffffff"--><!--android:textSize="17sp"--><!--android:alpha=".60"--><!--/>--><!--</RelativeLayout>-->
-
-    <!--</RelativeLayout>-->
-
-    <!--<RelativeLayout--><!--android:id="@+id/rl_line3"--><!--android:layout_width="fill_parent"--><!--android:layout_height="@dimen/alarmlist_height"--><!--android:layout_below="@id/rl_line2">-->
-
-    <!--<ImageButton--><!--android:layout_width="55dp"--><!--android:layout_height="55dp"--><!--android:layout_marginStart="25dp"--><!--android:adjustViewBounds="true"--><!--android:background="@null"--><!--android:src="@drawable/alram_small_on"--><!--android:scaleType="fitCenter"--><!--android:layout_centerVertical="true"/>-->
-
-    <!--<RelativeLayout--><!--android:layout_width="fill_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_marginStart="120dp"--><!--android:layout_centerVertical="true">-->
-
-    <!--<TextView--><!--android:id="@+id/time3"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="AM 7:30"--><!--android:textColor="#ffffff"--><!--android:textSize="20sp"--><!--android:alpha=".60"/>-->
-
-    <!--<ImageButton--><!--android:layout_width="20dp"--><!--android:layout_height="20dp"--><!--android:background="@null"--><!--android:src="@drawable/alpha_small_off"--><!--android:layout_toRightOf="@id/time3"--><!--android:layout_alignBottom="@id/time3"--><!--android:scaleType="fitCenter"/>-->
-
-    <!--<TextView--><!--android:id="@+id/time3_day"--><!--android:layout_below="@id/time3"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Mon Tue Wed Thu Fri "--><!--android:textColor="#ffffff"--><!--android:textSize="17sp"--><!--android:alpha=".60"--><!--/>-->
-
-    <!--<TextView--><!--android:id="@+id/time3_day2"--><!--android:layout_below="@id/time3"--><!--android:layout_toRightOf="@id/time3_day"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Sat Sun"--><!--android:textColor="#ffffff"--><!--android:textSize="17sp"--><!--/>--><!--</RelativeLayout>-->
-
-    <!--</RelativeLayout>-->
-
-    <!--<RelativeLayout--><!--android:id="@+id/rl_line4"--><!--android:layout_width="fill_parent"--><!--android:layout_height="@dimen/alarmlist_height"--><!--android:layout_below="@id/rl_line3">-->
-
-    <!--<ImageButton--><!--android:layout_width="55dp"--><!--android:layout_height="55dp"--><!--android:layout_marginStart="25dp"--><!--android:adjustViewBounds="true"--><!--android:background="@null"--><!--android:src="@drawable/alram_small_off"--><!--android:scaleType="fitCenter"--><!--android:layout_centerVertical="true"/>-->
-
-    <!--<RelativeLayout--><!--android:layout_width="fill_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_marginStart="120dp"--><!--android:layout_centerVertical="true">-->
-
-    <!--<TextView--><!--android:id="@+id/time4"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="AM 8:00"--><!--android:textColor="#ffffff"--><!--android:textSize="20sp"--><!--android:alpha=".60"/>-->
-
-    <!--<ImageButton--><!--android:layout_width="20dp"--><!--android:layout_height="20dp"--><!--android:background="@null"--><!--android:src="@drawable/alpha_small_off"--><!--android:layout_toRightOf="@id/time4"--><!--android:layout_alignBottom="@id/time4"--><!--android:scaleType="fitCenter"/>-->
-
-    <!--<TextView--><!--android:id="@+id/time4_day"--><!--android:layout_below="@id/time4"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Mon Tue Wed Thu Fri Sat Sun"--><!--android:textColor="#ffffff"--><!--android:textSize="17sp"--><!--android:alpha=".60"--><!--/>--><!--</RelativeLayout>-->
-
-    <!--</RelativeLayout>-->
-
-    <!--<RelativeLayout--><!--android:id="@+id/rl_line5"--><!--android:layout_width="fill_parent"--><!--android:layout_height="@dimen/alarmlist_height"--><!--android:layout_below="@id/rl_line4">-->
-
-    <!--<ImageButton--><!--android:layout_width="55dp"--><!--android:layout_height="55dp"--><!--android:layout_marginStart="25dp"--><!--android:adjustViewBounds="true"--><!--android:background="@null"--><!--android:src="@drawable/alram_small_on"--><!--android:scaleType="fitCenter"--><!--android:layout_centerVertical="true"/>-->
-
-    <!--<RelativeLayout--><!--android:layout_width="fill_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_marginStart="120dp"--><!--android:layout_centerVertical="true">-->
-
-    <!--<TextView--><!--android:id="@+id/time5"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="AM 9:30"--><!--android:textColor="#ffffff"--><!--android:textSize="20sp"--><!--android:alpha=".60"/>-->
-
-    <!--<ImageButton--><!--android:layout_width="20dp"--><!--android:layout_height="20dp"--><!--android:background="@null"--><!--android:src="@drawable/alpha_small_off"--><!--android:layout_toRightOf="@id/time5"--><!--android:layout_alignBottom="@id/time5"--><!--android:scaleType="fitCenter"/>-->
-
-    <!--<TextView--><!--android:id="@+id/time5_day"--><!--android:layout_below="@id/time5"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Mon Tue Wed Thu Fri "--><!--android:textColor="#ffffff"--><!--android:textSize="17sp"--><!--android:alpha=".60"--><!--/>-->
-
-    <!--<TextView--><!--android:id="@+id/time5_day2"--><!--android:layout_below="@id/time5"--><!--android:layout_toRightOf="@id/time5_day"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Sat Sun"--><!--android:textColor="#ffffff"--><!--android:textSize="17sp"--><!--/>--><!--</RelativeLayout>-->
-
-    <!--</RelativeLayout>-->
